[2단계 - 자동차 경주 리팩터링] 레디(최동근) 미션 제출합니다. (#747)
* style: 개행 추가

* chore: 구현 기능 목록 위치 변경

* refactor: car Comparable 구현하여 cars sort 메서드 추가

* refactor: cardto 제거

* style: 상수와 인스턴스 변수 사이 개행

* docs: 리팩토링 목록 추가

* refactor: stream toList로 변경

* docs: 리팩토링 목록 추가

* refactor: 재귀를 제거하고 인덴트를 1로 유지하기

* refactor: 정렬(sort)대신 최대값(max) 활용하여 우승자 확인

* feat: VO equals & hashCode 재정의

* style: 주석 제거

* refactor: 테스트 코드 static으로 변경

* docs: 구현 목록 수정

* refactor: 테스트 코드를 다양하게 사용할 수 있도록 변경

* test: 동일한 위치인지 확인하는 테스트 추가

* refactor: null 대신 Optional 사용

* refactor: Comparable 대신 isWin을 생성