@@ -1,15 +1,22 @@
 package racingcar.model;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import racingcar.message.ErrorMessage;
 
 public class Cars {
 
     private static final String SEPARATOR = ",";
+
     private final List<Car> cars;
+
+    public Cars(final Car... car) {
+        final List<Car> value = new ArrayList<>(Arrays.asList(car));
+        validateDuplicateName(value);
+        this.cars = value;
+    }
 
     private Cars(final List<Car> cars) {
         validateDuplicateName(cars);
@@ -21,7 +28,7 @@ public class Cars {
 
         final List<Car> cars = Arrays.stream(carsName.split(SEPARATOR))
                 .map(Car::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return new Cars(cars);
     }
@@ -39,27 +46,30 @@ public class Cars {
     }
 
     public void go(final NumberGenerator generator) {
-        cars.forEach(car -> car.go(generator.generate()));
+        cars.forEach(car -> car.go(generator));
     }
 
-    public List<Car> findWinner() {
-        final int maxPosition = getMaxPosition();
-
+    public List<Car> findWinners() {
+        Car winner = findWinner();
         return cars.stream()
-                .filter(car -> car.getPosition() == maxPosition)
+                .filter(car -> car.isSamePosition(winner))
                 .toList();
     }
 
-    private int getMaxPosition() {
+    public Car findWinner() {
         return cars.stream()
-                .mapToInt(Car::getPosition)
-                .max()
-                .orElseThrow(IllegalStateException::new);
+                .reduce((car, car2) -> car.isWin(car2) ? car : car2)
+                .orElseThrow();
     }
 
     public List<Car> getCars() {
         return cars.stream()
                 .map(Car::copy)
                 .toList();
+    }
+
+    @Override
+    public String toString() {
+        return cars.toString();
     }
 }
